--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
 
     </header>
     <main>
-
-        <div class="calendario flex flex-col bg-stone-400 text-3xl w-2/3 m-auto">
+        <h1 class="text-4xl text-center">Agenda de turnos</h1>
+        <h2 class="text-2xl text-center">Profecional: <span id="profecional"></span></h2>
+        <div class="flex justify-start w-2/3 m-auto my-4">
+            <div class="bg-blue-500 w-12 border-2 border-slate-600 mx-4 rounded-md"></div>
+            <h3>días habilitados</h3>
+        </div>
+        <div class="calendario flex flex-col bg-slate-400 text-3xl w-2/3 m-auto p-4 rounded-md">
             <div class="calendarioInfo flex justify-center">
                 <div class="mesPrevio mx-4" id="mesPrevio">
                     <button> < </button>
@@ -29,7 +34,7 @@
             </div>
 
 
-            <div class="calendarioHeader flex justify-around">
+            <div class="calendarioHeader flex justify-around bg-slate-300 my-2 rounded-md">
                 <div class="calenderDay calenderItem">Domingo</div>
                 <div class="calenderDay calenderItem">Lunes</div>
                 <div class="calenderDay calenderItem">Martes</div>
@@ -39,11 +44,11 @@
                 <div class="calenderDay calenderItem">Sabado</div>
             </div>
 
-            <div class="calendarioBody bg-stone-200 grid grid-cols-7 " id="dias"></div>
+            <div class="calendarioBody bg-slate-200 grid grid-cols-7 py-2 rounded-md p-2" id="dias"></div>
         </div>
     </main>
     <script type="module" src="./app.js"></script>
-    <script src="./capturarDia.js"></script>
+    <script type="module" src="./capturarDia.js"></script>
 </body>
 
 </html>
